safari overflow bug fixing attempt4

--- a/client/src/pages/HomePage/style.css
+++ b/client/src/pages/HomePage/style.css
@@ -1,5 +1,4 @@
 .homecard {
-  -webkit-text-size-adjust: none;
   border-radius: 50%;
   box-shadow: 1px 5px 5px black;
   margin: auto;
@@ -18,6 +17,7 @@
 #myStory {
   /* border-style: solid; 
   border-width: 1px;  */
+  -webkit-text-size-adjust: none;
 
   margin: auto;
   margin-top: 2vw;
@@ -53,6 +53,8 @@
 }
 
 #skillscontainer {
+  -webkit-text-size-adjust: none;
+
   /* border-style: solid; 
   border-width: 1px;  */
   text-align: center;
